--- a/open.css
+++ b/open.css
@@ -1,6 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
 
+			
+			@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+
 			body{font-family: 'Black Han Sans', sans-serif; font-size: 2.2vw;	
 					}
 
